styled home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
 
 <body>
     <div class="container">
+        <header>
+            <section class= "top">
+                <img src = "./img/lambda-black.png"  alt = 'Lambda School Logo'>
+                <section class = "menu">
+                    <ul>
+                        <li><a href= "Home">Home</a></li>
+                        <li><a href= "about.html">About</a></li>
+                        <li><a href= "Products">Products</a></li>
+                        <li><a href= "Blog">Blog</a></li>
+                        <li><a href= "Contact">Contact</a></li>
+                    </ul>
+                </section>
+            </section>
+        </header>
    
+
+        <section>
+            <img class ="top-content-image" src = "img/jumbo.jpg" alt = "image for homepage">
+        </section>
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
